<resources>
    <string name="app_name">Arduino Bluetooth RC Car</string>
    <string name="forward">Forward</string>
    <string name="forward_10_left">forward LEFT</string>
    <string name="forward_10_right">forward RIGHT</string>
    <string name="reverse">REVERSE</string>
    <string name="reverse_10_left">Reverse Left</string>
    <string name="connect_to_bluetooth_device">Connect to Bluetooth Device</string>
    <string name="reverse_10_right">Reverse Right</string>
</resources>
