<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.philipgo.arduinobluetoothrccar.MainActivity">

    <Button
        android:id="@+id/forward_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_toStartOf="@+id/forward_right_btn"
        android:layout_toLeftOf="@+id/forward_right_btn"
        android:text="@string/forward" />

    <Button
        android:id="@+id/forward_left_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/forward_btn"
        android:layout_toStartOf="@+id/forward_btn"
        android:layout_toLeftOf="@+id/forward_btn"
        android:text="@string/forward_10_left" />

    <Button
        android:id="@+id/forward_right_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_above="@+id/reverse_btn"
        android:layout_toEndOf="@+id/reverse_btn"
        android:layout_toRightOf="@+id/reverse_btn"
        android:text="@string/forward_10_right" />

    <Button
        android:id="@+id/reverse_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/forward_left_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:text="@string/reverse" />

    <Button
        android:id="@+id/reverse_left_btn"
        android:layout_width="138dp"
        android:layout_height="80dp"
        android:layout_below="@+id/forward_left_btn"
        android:layout_alignStart="@+id/forward_left_btn"
        android:layout_alignLeft="@+id/forward_left_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="31dp"
        android:text="@string/reverse_10_left" />

    <Button
        android:id="@+id/reverse_right_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/forward_right_btn"
        android:layout_alignEnd="@+id/forward_right_btn"
        android:layout_alignRight="@+id/forward_right_btn"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="-2dp"
        android:layout_toEndOf="@+id/reverse_btn"
        android:layout_toRightOf="@+id/reverse_btn"
        android:text="@string/reverse_10_right" />

    <Button
        android:id="@+id/bluetooth_connect_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/connect_to_bluetooth_device" />
</RelativeLayout>
